[package]
name = "factorr"
version = "0.1.0"
edition = "2021"
descripion = "CLI for Prime factorization"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "4.0.9", features = ["derive"] }
owo-colors = "3.5.0"
prime-factor = "0.4.3"
rustyline = "10.0.0"
